tests/lang/compile_fail/priv_type_in_public_signature.kojs
priv struct Hidden
  value: Int
end

fn probe(h: Hidden) -> Int
  h.value
end

probe(Hidden{value: 1}).print()
